# rust_jailbreak_detection

./: Cargo.toml  LICENSE  README.md  build.sh
.github/: README_BADGES.md
.github/workflows/: README.md  development.yml  release.yml  security.yml
Examples/: App-Bridging-Header.h  SwiftIntegration.swift
release/: BUILD_REPORT.md  VERSION  jailbreak_detection.h
src/: lib.rs
