[package]
name = "jailbreak_detection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Core system dependencies
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2.4"
